# rewrite-it-rs

./: .gitignore  Cargo.toml  README.md  install.sh  tasks.yaml  uninstall.sh
.mk/vault/local/agents/: data.asc
assets/: org.rewriteit.Rewriter1.service  rewrite-it-kde.desktop  rewrite-it-selection  rewrite-it.service
assets/rewrite-it-kwin/: metadata.json
assets/rewrite-it-kwin/contents/code/: main.js
src/: config.rs  dbus.rs  lib.rs  llm.rs  main.rs  model.rs  prompt.rs
